<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_colors"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_not_have"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="126dp"
        android:background="@drawable/background_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/do_not_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:fontFamily="@font/font_text_sf_ui_display"
            android:text="@string/text_do_not_have_an_account"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/card_not_have"
            app:layout_constraintEnd_toEndOf="@id/card_not_have"
            app:layout_constraintStart_toStartOf="@id/card_not_have" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="98dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/background_card_two"
        app:layout_constraintBottom_toBottomOf="@id/card_not_have"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/sf_ui_display_bold"
            android:text="@string/text_sign_in"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="59dp"
            android:layout_height="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/font_text_sf_ui_display"
            android:gravity="left"
            android:text="@string/text_email"
            android:textColor="@color/text_color"
            android:textSize="8sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in"
            tools:ignore="RtlHardcoded,SmallSp" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="23dp"
            android:autofillHints="input_email"
            android:background="@drawable/background_edit_text"
            android:inputType="textEmailAddress"
            android:paddingStart="29dp"
            android:paddingEnd="79dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/text_email"
            app:layout_constraintTop_toBottomOf="@id/text_email"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/text_password"
            android:layout_width="68dp"
            android:layout_height="16dp"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/font_text_sf_ui_display"
            android:gravity="left"
            android:text="@string/text_password"
            android:textColor="@color/text_color"
            android:textSize="8sp"
            app:layout_constraintStart_toStartOf="@id/text_email"
            app:layout_constraintTop_toBottomOf="@id/input_email"
            tools:ignore="RtlHardcoded,SmallSp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="23dp"
            android:autofillHints="input_email"
            android:background="@drawable/background_edit_text"
            android:inputType="textWebPassword"
            android:paddingStart="29dp"
            android:paddingEnd="79dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/text_email"
            app:layout_constraintTop_toBottomOf="@id/text_password"
            tools:ignore="LabelFor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_in"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/background_button"
            android:fontFamily="@font/sf_ui_display_semi_bold"
            android:text="@string/text_button_sign_in"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/input_password"
            app:layout_constraintStart_toStartOf="@id/input_password"
            app:layout_constraintTop_toBottomOf="@id/input_password" />

        <TextView
            android:id="@+id/forgot_your_password"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:fontFamily="@font/font_text_sf_ui_display"
            android:text="@string/text_forgot_your_password"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/btn_sign_in"
            app:layout_constraintStart_toStartOf="@id/btn_sign_in"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16sp"
        android:contentDescription="@string/facebook_logo"
        android:src="@drawable/ic_facebook"
        app:layout_constraintEnd_toStartOf="@id/twitter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_not_have" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/facebook_logo"
        android:foregroundGravity="center_horizontal"
        android:paddingHorizontal="18dp"
        android:src="@drawable/facebook_logo"
        app:layout_constraintBottom_toBottomOf="@id/facebook"
        app:layout_constraintEnd_toEndOf="@id/facebook"
        app:layout_constraintStart_toStartOf="@id/facebook"
        app:layout_constraintTop_toTopOf="@+id/facebook" />

    <ImageView
        android:id="@+id/twitter"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/twitter_logo"
        android:src="@drawable/ic_twitter"
        app:layout_constraintBottom_toBottomOf="@id/facebook"
        app:layout_constraintStart_toEndOf="@id/facebook"
        app:layout_constraintTop_toTopOf="@id/facebook" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/twitter_logo"
        android:foregroundGravity="center_horizontal"
        android:paddingHorizontal="18dp"
        android:src="@drawable/twitter_logo"
        app:layout_constraintBottom_toBottomOf="@id/twitter"
        app:layout_constraintEnd_toEndOf="@id/twitter"
        app:layout_constraintStart_toStartOf="@id/twitter"
        app:layout_constraintTop_toTopOf="@+id/twitter" />

    <ImageView
        android:id="@+id/gmail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="80dp"
        android:contentDescription="@string/gmail_logo"
        android:src="@drawable/ic_gmail"
        app:layout_constraintBottom_toBottomOf="@id/twitter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gmail"
        app:layout_constraintStart_toEndOf="@id/twitter"
        app:layout_constraintTop_toTopOf="@id/twitter" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/gmail_logo"
        android:foregroundGravity="center_horizontal"
        android:paddingHorizontal="18dp"
        android:src="@drawable/gmail_logo"
        app:layout_constraintBottom_toBottomOf="@id/gmail"
        app:layout_constraintEnd_toEndOf="@id/gmail"
        app:layout_constraintStart_toStartOf="@id/gmail"
        app:layout_constraintTop_toTopOf="@+id/gmail" />


</androidx.constraintlayout.widget.ConstraintLayout>